src/tests/errors/lexer/003.ura
// parse_errors/003 — unterminated block comment
use "@/header"

/* this comment never closes
main():
    output("hi\n")