src/tests/errors/lexer/003.err
[1m[0;31merror: [0munterminated block comment, expected '*/'
  [1m[34m-->[0m src/tests/errors/lexer/003.ura:6:1
  [1m[34m|[0m
[1m[34m6 |[0m /* this comment never closes
  [1m[34m|[0m [1;31m^^[0m
